[gd_scene load_steps=7 format=3 uid="uid://bbyconr4ni1oh"]

[ext_resource type="Script" path="res://scripts/nature/tree.gd" id="1_13muy"]
[ext_resource type="Texture2D" uid="uid://6e6vgre6jjm5" path="res://assets/nature/tree_02.png" id="1_iebuw"]

[sub_resource type="Animation" id="Animation_uw1v5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_wh5lt"]
resource_name = "grow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -3.2), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_o4l3y"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r61av"]
_data = {
"RESET": SubResource("Animation_uw1v5"),
"grow": SubResource("Animation_wh5lt"),
"idle": SubResource("Animation_o4l3y")
}

[node name="Tree" type="Node2D"]
script = ExtResource("1_13muy")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("1_iebuw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r61av")
}
autoplay = "idle"

[node name="FruitSpawns" type="Node2D" parent="."]

[node name="Spawn1" type="Marker2D" parent="FruitSpawns"]
position = Vector2(-15, -38)

[node name="Spawn2" type="Marker2D" parent="FruitSpawns"]
position = Vector2(17, -44)

[node name="Spawn3" type="Marker2D" parent="FruitSpawns"]
position = Vector2(2, -49)

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="SpawnTimer" to="." method="spawn_fruit"]
